--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Calculator</title>
 </head>
 <body>
-    
+    <h1 class="text-center">Simple Calculator</h1>
+    <div class="container">
+        <div class="calculator">
+            <div class="scren" id="charecter"></div>
+            <div class="button-body">
+                <button class="btn btn-light btn-control">9</button>
+                <button class="btn btn-light btn-control">8</button>
+                <button class="btn btn-light btn-control">7</button>
+                <button class="btn btn-light btn-control">/</button>
+                <button class="btn btn-light btn-control">6</button>
+                <button class="btn btn-light btn-control">5</button>
+                <button class="btn btn-light btn-control">4</button>
+                <button class="btn btn-light btn-control">*</button>
+                <button class="btn btn-light btn-control">3</button>
+                <button class="btn btn-light btn-control">2</button>
+                <button class="btn btn-light btn-control">1</button>
+                <button class="btn btn-light btn-control">-</button>
+                <button class="btn btn-light btn-control">C</button>
+                <button class="btn btn-light btn-control">0</button>
+                <button class="btn btn-light btn-control">=</button>
+                <button class="btn btn-light btn-control">+</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
