event listener added to all button

--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1 class="text-center">Simple Calculator</h1>
     <div class="container">
         <div class="calculator">
-            <div class="scren" id="charecter"></div>
+            <span class="copyright">Copyright: Abir Hasan</span>
+            <div class="scren" id="charecter">0</div>
             <div class="button-body">
-                <button class="btn btn-light btn-control">9</button>
-                <button class="btn btn-light btn-control">8</button>
-                <button class="btn btn-light btn-control">7</button>
+                <button class="btn btn-light btn-control common-btn">9</button>
+                <button class="btn btn-light btn-control common-btn">8</button>
+                <button class="btn btn-light btn-control common-btn">7</button>
                 <button class="btn btn-light btn-control">/</button>
-                <button class="btn btn-light btn-control">6</button>
-                <button class="btn btn-light btn-control">5</button>
-                <button class="btn btn-light btn-control">4</button>
+                <button class="btn btn-light btn-control common-btn">6</button>
+                <button class="btn btn-light btn-control common-btn">5</button>
+                <button class="btn btn-light btn-control common-btn">4</button>
                 <button class="btn btn-light btn-control">*</button>
-                <button class="btn btn-light btn-control">3</button>
-                <button class="btn btn-light btn-control">2</button>
-                <button class="btn btn-light btn-control">1</button>
+                <button class="btn btn-light btn-control common-btn">3</button>
+                <button class="btn btn-light btn-control common-btn">2</button>
+                <button class="btn btn-light btn-control common-btn">1</button>
                 <button class="btn btn-light btn-control">-</button>
                 <button class="btn btn-light btn-control">C</button>
-                <button class="btn btn-light btn-control">0</button>
+                <button class="btn btn-light btn-control common-btn">0</button>
                 <button class="btn btn-light btn-control">=</button>
                 <button class="btn btn-light btn-control">+</button>
             </div>
         </div>
     </div>
+    <script src="js/style.js"></script>
 </body>
 </html>
